# krendbuoy

./: .gitignore  README.md  settings.gradle
.github/workflows/: build-android-apk.yml  build-android-libretro.yml  devkitpro-build.yml
android-app/: build.gradle  proguard-rules.pro
android-app/src/main/: AndroidManifest.xml
android-app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp
android-app/src/main/res/drawable/: ic_launcher_foreground.xml
docs/: android-libretro.md  workflow-refresh-note.txt
po/wxvbam/: bg.po  br.po  cs.po  el.po  es.po  es_419.po  fr_FR.po  gl.po  he_IL.po  hu_HU.po  id.po  it_IT.po  ja.po  ko_KR.po  ms_MY.po  nb.po  nl.po  pl_PL.po  pt_BR.po  ru_RU.po  sv.po  tr.po  uk.po  wxvbam.pot  zh_CN.po
scripts/: build-android-libretro.sh
src/: vba-over.ini
src/core/: CMakeLists.txt
src/core/base/: system.h
src/core/gb/: gb.cpp  gbGfx.cpp  gbGlobals.h
src/core/gba/: gba.cpp  gbaCpuArm.cpp  gbaElf.cpp  gbaElf.h  gbaInline.h  gbaLink.cpp  gbaMgbaLog.cpp  gbaMgbaLog.h
src/core/gba/internal/: gbaBios.cpp
src/core/test/: CMakeLists.txt  suite_runner.cpp
src/libretro/: Makefile.common  link_stub.cpp
src/sdl/: ConfigManager.cpp
src/wx/: CMakeLists.txt  cmdevents.cpp  guiinit.cpp  panel.cpp  sys.cpp  viewers.cpp  wxvbam.cpp  wxvbam.h
src/wx/config/: option-test.cpp
src/wx/config/internal/: option-internal.cpp
src/wx/dialogs/: display-config.cpp
src/wx/rpi-proxy/: RpiProxyClient.cpp  RpiProxyClient.h
src/wx/rpi-proxy/host/: rpi-host-main.cpp
src/wx/xrc/: GeneralConfig.xrc
(+23 files in other folders)
